istio-crds/authz-order-api.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: order-api-authz
  namespace: ecommerce
spec:
  selector:
    matchLabels:
      app: order-api
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/ecommerce/sa/ecommerce-ui"
